// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.UI.StatusIndicator closing should render correctly 1`] = `
<StatusIndicator__StyledStatusIndicator
  variant="closing"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</StatusIndicator__StyledStatusIndicator>
`;

exports[`component.UI.StatusIndicator offline should render correctly 1`] = `
<StatusIndicator__StyledStatusIndicator
  variant="offline"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</StatusIndicator__StyledStatusIndicator>
`;

exports[`component.UI.StatusIndicator online should render correctly 1`] = `
<StatusIndicator__StyledStatusIndicator
  variant="online"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</StatusIndicator__StyledStatusIndicator>
`;

exports[`component.UI.StatusIndicator pending should render correctly 1`] = `
<StatusIndicator__StyledStatusIndicator
  variant="pending"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</StatusIndicator__StyledStatusIndicator>
`;
